[package]
name = "indicators-core"
version = "0.1.0"
edition = "2021"
description = "High-performance indicators engine core in Rust"

[lib]
name = "indicators_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 para puente Python-Rust
pyo3 = { version = "0.21", features = ["extension-module"] }

# Mensajería y async
tokio = { version = "1.0", features = ["full"] }
async-nats = "0.35"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DataFrames y álgebra (para VWAP eficiente)
polars = { version = "0.40", features = ["lazy", "temporal", "strings"] }

# Estructuras de datos concurrentes
dashmap = "5.5"  # HashMap concurrente
crossbeam = "0.8"  # Estructuras lock-free
parking_lot = "0.12"  # Mutex/RwLock más eficientes

# SIMD y rendimiento (solo si necesitamos SIMD en nightly)
# portable-simd = "0.2"  # Requiere nightly
rayon = "1.8"  # Paralelización

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilidades
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"  # Benchmarks
proptest = "1.4"  # Property-based testing

